# mindXtrain

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Containerfile  HACKATHON.md  HANDOFF.md  LICENSE  LICENSE-MIT-upstream-glm51  LICENSE-NOTICE.md  NOTICE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
contracts/: README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: mindxtrain_registry.sol  x402_receiver.sol
contracts/test/: MindxtrainRegistry.t.sol
docs/: NAV.md  actualization_status.md  architecture.md  autotune.md  benchmarks.md  cli.md  coach.md  development.md  hackathon_submission.md  quickstart.md  yaml_schema.md
docs/blueprints/: mindXtrain.md  mindXtrain2.md  mindXtrain_ Production Blueprint for the AMD and lablab.ai Hackathon.md
docs/posts/: README.md  day1_scaffold.md  day2_autotune.md  day5_demo.md
docs/posts/rendered/: about.html  day1.html  day2.html  day5.html
examples/: demo_qwen3_8b_sft.yaml
mindxtrain/: __init__.py
mindxtrain/autotune/: __init__.py  attention_probe.py  benchmark.py  gemm_probe.py  plan.py  rccl_probe.py
mindxtrain/budget/: pricing.py  resource.py
mindxtrain/budget/providers/: akash.py  amd_dev_cloud.py  bacalhau.py  ionet.py  tensorwave.py
mindxtrain/cli/: main.py
mindxtrain/config/: __init__.py  deploy_default.json  eval_default.json  loader.py  schema.py  train_default.json
mindxtrain/data/: curate.py  dedupe.py  filter.py  pack.py  synth.py  tokenize.py  verify.py
mindxtrain/data/sources/: __init__.py  mindx_dreams.py
mindxtrain/deploy/: __init__.py  _orchestrator.py  ab_test.py  amd_dev_cloud.py  api_client.py  cloud_init.py  droplet.py  github_push.py  gptq_rocm.py  hot_swap.py  quark.py  registry.py  sglang_rocm.py  vllm_launcher.py
mindxtrain/eval/: agenda_regression.py  bfcl.py  card.py  harness.py  inspect_ai_adapter.py  lighteval_adapter.py  persona_regression.py  tau_bench.py
mindxtrain/eval/mei/: __init__.py  anchors.py  history.py  record.py  score.py  tokenizer.py  xei.py
mindxtrain/models/: chat_template.py  deepseek_v32.py  glm51.py  mistral3.py  phi4_mini.py  qwen35.py  registry.py
mindxtrain/operator/: agent_loop.py  app.py  approval.py  context.py  runs.py  tool_router.py  training_api.py  trajectory.py
mindxtrain/operator/backends/: openai_compat.py  vllm.py
mindxtrain/operator/coach/: __init__.py  api.py  hw_diagnostics.py
mindxtrain/operator/prompts/: codephreak.yaml  system_v1.yaml
mindxtrain/operator/telemetry/: energy.py  otel_hooks.py  prometheus_exporter.py
mindxtrain/provenance/: algorand.py  erc8004.py  hashing.py  manifest.py  verify.py  x402.py
mindxtrain/storage/: hf_hub.py  ipfs.py  lighthouse.py  local_fs.py  provider.py
mindxtrain/train/: __init__.py  axolotl_compile.py  backend_primus.py  backend_torchtune.py  backend_trl_cpu.py  backend_unsloth.py  callbacks.py  dispatch.py  distributed.py  dpo.py  grpo.py  rlhf.py  sft.py  tool_use.py
mindxtrain/train/recipes/: instella_3b_lora.yaml  mindx_fallback_qwen3_1_5b_cpu.yaml  mindx_fallback_qwen3_1_5b_sft_lora.yaml  qwen3_30b_a3b_lora.yaml  qwen3_32b_dpo.yaml  qwen3_32b_full_fsdp.yaml  qwen3_32b_grpo.yaml  qwen3_32b_orpo.yaml  qwen3_8b_cpt.yaml  (+5 more)
ops/: README.md
ops/compose/: compose_dev.yaml
ops/containerfiles/: containerfile_serve  containerfile_train
ops/k8s/: train_job.yaml
tests/: test_ab_test.py  test_agent_loop.py  test_api_client.py  test_autotune_plan.py  test_axolotl_compile.py  test_cli_smoke.py  test_coach_admin_api.py  test_coach_api.py  test_coach_deploy_endpoints.py  test_coach_hardware_api.py  test_coach_mei_api.py  test_coach_preflight.py  test_config_schema.py  test_context_manager.py  test_cpu_throttle.py  test_data_curate_combined.py  test_data_pipeline.py  test_deploy_amd_dev_cloud.py  test_deploy_cloud_init.py  test_deploy_droplet.py  test_deploy_github.py  test_deploy_registry.py  test_distributed.py  test_hw_diagnostics.py  test_manifest.py  test_mei_history.py  test_mei_record.py  test_mei_score.py  test_mei_tokenizer.py  test_mei_xei.py  test_mindx_dreams_source.py  test_mindx_evolutions_source.py  test_models_registry.py  test_pack.py  test_parsers.py  test_pricing.py  test_provenance_verify.py  test_publish_mei_gate.py  test_remote_training_stream.py  test_runs_sse.py  (+3 more)
wordpress_agent/: .gitignore  publish_jwt.py  published_urls.json  pyproject.toml
wordpress_agent/deploy/systemd/: wordpress-agent.service
wordpress_agent/scripts/: install.sh
wordpress_agent/tests/: __init__.py  conftest.py  test_agent.py  test_config.py  test_server.py
wordpress_agent/wordpress_agent/: cli.py  config.py  server.py
(+3 files in other folders)
